explorer/kubernetes/explorer-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: fabric-explorer-service

spec:

  selector:
    app: fabric-explorer

  ports:

  - protocol: TCP

    port: 8080

    targetPort: 8080

  type: ClusterIP
