explorer/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fabric-explorer-ingress

spec:

  rules:

  - host: explorer.fabricforge.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: fabric-explorer-service

            port:

              number: 8080
